# lumen

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TECHNICAL.md  pyproject.toml
docs/: TECH_ANALYSES.md  TEST_QUESTIONS.md  VISION.md  mockup.html  moodboard.html
frontend/: index.html  package-lock.json  package.json
frontend/public/fonts/: flanders-fonts.css
frontend/public/geo/: vlaanderen-gemeenten.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: CellView.tsx  ChartRenderer.tsx  CodeView.tsx  DataDictionary.tsx  InputBar.tsx  NarrativeView.tsx  ReasoningStream.tsx  StageIndicator.tsx
frontend/src/locales/: en.json  index.ts  nl.json
frontend/src/types/: cell.ts  schema.ts
frontend/src/utils/: sse.ts
lumen/: cell.py  cli.py  config.py  core.py  server.py  theme.py
lumen/agent/: agent.py  cell.py  executor.py  history.py  models.py  prompts.py  sql_validator.py  suggestions.py
lumen/datasource/: duckdb_source.py  postgres.py  protocol.py
lumen/notebook/: notebook.py  store.py
lumen/schema/: augmenter.py  cache.py  context.py  describer.py  enricher.py  introspector.py
lumen/server/: app.py  dependencies.py  schema_context.py  sse.py  state.py
lumen/server/routes/: ask.py  config.py  health.py  notebook.py  schema.py  suggestions.py
lumen/viz/: auto_detect.py  theme.py  validator.py
lumen/whatif/: chart.py  explain.py  trend.py
scripts/: build_geo_lookup.py
tests/: conftest.py  test_agent.py  test_augmenter.py  test_auto_detect.py  test_cell.py  test_context.py  test_core.py  test_enrichment.py  test_explain.py  test_history.py  test_notebook_persistence.py  test_run_sql.py  test_schema_staleness.py  test_server_cells.py  test_sql_validator.py  test_suggestions.py  test_trend.py  test_trend_chart.py  test_viz_validator.py
